fix: on mobile make image smaller

--- a/packages/app/src/styles/components/welcome-page.css
+++ b/packages/app/src/styles/components/welcome-page.css
@@ -93,7 +93,7 @@
       @apply mx-auto mb-5;
 
       @media (max-width: 640px) {
-        @apply h-[180px];
+        @apply max-w-[180px];
       }
     }
   }
